# impl-for

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/impl-for/: Cargo.toml
crates/impl-for/src/: lib.rs
crates/into-bytes/: Cargo.toml  README.md
crates/into-bytes/src/: lib.rs
