[package]
name = "impl-for"
authors = ["Thomas Sieverding <Thomas@bajix.com>"]
edition = "2021"
version = "0.2.1"
description = "Macros to impl for multiple types"
readme = "../../README.md"
license = "MIT"
repository = "https://github.com/Bajix/impl-for/"

[lib]
test = false
doctest = false
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = "1"
replace-types = "0.2"
syn = { version = "2", features = [] }

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
